force-app/main/default/objects/ClusterJob__c/ClusterJob__c.object-meta.xml
<CustomObject>
    <label>Cluster Job</label>
    <nameField>
        <displayFormat>CJ-{0000}</displayFormat>
        <label>ClusterJob Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>