force-app/main/default/objects/ClusterJob__c/fields/ClusterModel__c.field-meta.xml
<CustomField>
    <fullName>ClusterModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model</label>
    <referenceTo>ClusterModel__c</referenceTo>
    <relationshipLabel>Cluster Jobs</relationshipLabel>
    <relationshipName>Cluster_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>