force-app/main/default/objects/ClusterJob__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>