force-app/main/default/objects/ClusterJob__c/fields/InternalJobId__c.field-meta.xml
<CustomField>
    <fullName>InternalJobId__c</fullName>
    <label>Internal Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>