force-app/main/default/objects/ClusterJob__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>