force-app/main/default/objects/ClusterJob__c/fields/JobStatus__c.field-meta.xml
<CustomField>
    <fullName>JobStatus__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>JobStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>MarkedForCancel</fullName>
                <label>Marked for Cancel</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>