force-app/main/default/objects/ClusterJob__c/fields/JobStatusText__c.field-meta.xml
<CustomField>
    <fullName>JobStatusText__c</fullName>
    <label>Job Status Details</label>
    <type>TextArea</type>
</CustomField>