force-app/main/default/objects/ClusterJob__c/fields/NumberOfClusters__c.field-meta.xml
<CustomField>
    <fullName>NumberOfClusters__c</fullName>
    <label>Number Of Clusters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>