force-app/main/default/objects/ClusterJob__c/fields/ScheduledStartDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledStartDate__c</fullName>
    <label>Scheduled Start Date</label>
    <type>DateTime</type>
</CustomField>