force-app/main/default/objects/ClusterJob__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Contains Silhouette score of all clusters in the job. Value ranges from −1 to +1, a high value indicates that the objects are well matched to their clusters</description>
    <label>Silhouette Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>