force-app/main/default/objects/ClusterJob__c/listViews/All_Cluster_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Cluster_Jobs</fullName>
    <columns>NAME</columns>
    <columns>JobName__c</columns>
    <columns>ClusterModel__c</columns>
    <columns>ObjectName__c</columns>
    <columns>JobStatus__c</columns>
    <columns>NumberOfClusters__c</columns>
    <columns>Score__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cluster Jobs</label>
</ListView>